[tool.poetry]
name = "mistral-agent"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mistralai = "0.4.1"
mangum = "^0.17.0"
python-multipart = "^0.0.9"
requests = "^2.32.2"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.0"
fastapi = "0.104.1"
starlette = "0.27.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
